# c-cpp

./: README.md  hello.cc  output.txt
1/: bytes.txt  commands.txt  descriptionobjectexec.txt  hello  hello.cc
2/: answer.txt
3/: answer.txt
5/: antwoord.txt
6/: hello.cc
7/: program  program.cc
8/: howtocall.txt  program  program.cc
W2/: exercise9  exercise9.cpp  multiplication.cpp
set 6/: enum.h  main.cc
set 6/41/: main.cc  main.ih  showChar.cc
set 6/42/: answer.txt
set 6/43/: main.cc  main.ih
set 6/46/: symbol.cc  symtab.h  value.cc  value.h
set 6/48/: ans.txt
set3/: errors.txt  metadata.txt
set3/17/: double.cc  main.cc  main.ih  order.txt  sum1.cc  sum2.cc
set3/18/: exercise18.cpp  main.cpp  main.ih
set3/19/: exercise19.txt
set3/20/: howtouse.txt  main  main.cpp  text.txt
set3/21/: findcase  findcase.cpp  main.cpp  main.ih
set3/22/: descr.txt  main  main.cc  main.ih  program
set3/23/: answers.txt  descriptoin.txt
set3/24/: callRef.cc  callValue.cc  fun1.cc  fun2.cc  function.h  main.cc  program
set4/: metadata.txt
set4/26/: Person.cc  Person2.cc  extract.cc  insert.cc  person.hh  person.ih  phone.cc  setAddress.cc  setMass.cc  setPhone.cc
set4/27/: main.cc  person.h
set4/28/: line.cc  line.h  main  main.cc  next.cc
set4/29/: makeclass.pl
set4/30/: CMakeLists.txt  descr.txt  main.cpp
set4/30/calculator/: calculator.h  calculator1.cc  evaluate2.cpp  evaluate3.cpp  frame  main.cpp  run.cpp
set4/32/: answer.txt
set4/final/: metadata.txt
set5/33/: answer.txt
set5/35/: main.cc  main.h  showChar.cc
(+161 files in other folders)
